# ninfs

./: .gitignore  BUILDING.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE.md  MANIFEST.in  README.md  common.py  default.nix  flake.nix  haccrypto.nix  installer.nsi  make_icons.sh  mount_cci.py  mount_cdn.py  mount_cia.py  mount_nand.py  mount_ncch.py  mount_romfs.py  mount_sd.py  ninfs.nix  package.nix  pyi-app.spec  pyproject.toml  requirements.txt  setup-cxfreeze.py  setup.py  standalone.spec
.github/: FUNDING.yml
fuse3ds/: __init__.py  __main__.py  _gui.py  _pyi_main.py  common.py  fmt_detect.py  main.py  mount_cci.py  mount_cdn.py  mount_cia.py  mount_nand.py  mount_ncch.py  mount_romfs.py  mount_sd.py  reg_shell.py
fuse3ds/hac/: _crypto.cpp  _crypto.pyi  aes.cpp  aes.h  ccrypto.cpp  crypto.py
fuse3ds/mount/: _common.py  cci.py  cdn.py  cia.py  common.py  exefs.py  nand.py  nandctr.py  nanddsi.py  nandhac.py  nandtwl.py  ncch.py  romfs.py  sd.py  srl.py  threedsx.py  titledir.py
fuse3ds/pyctr/: README.md  common.py  crypto.py  exefs.py  ncch.py  romfs.py  smdh.py  tmd.py  util.py
ninfs/: __init__.py  __main__.py  _frozen_main.py  _gui.py  _pyi_main.py  fmt_detect.py  fuse.py  main.py  mountinfo.py  reg_shell.py  winpathmodify.py
ninfs/_gui/: __init__.py  util.py  widgets.py  window.py
ninfs/gui/: __init__.py  about.py  confighandler.py  opendir.py  optionsframes.py  osver.py  outputviewer.py  settings.py  supportfiles.py  typeinfo.py  updatecheck.py  wizardcontainer.py
ninfs/hac/: README.md  _crypto.cpp  _crypto.pyi  crypto.py  libcrypto.1.1.dylib
nix/: mfusepy.nix
pyctr/: crypto.py  ncch.py  romfs.py  util.py
resources/: InternetAccessPolicy.plist  MacGettingStarted.pages  basic-pdf-thing.key  ninfs.1
scripts/: make-app-mac.sh  make-dmg-mac.sh  make-dmg.sh  make-exe-win.bat  make-icons.sh  make-inst-win.bat  make-wheels-win.bat  make-wheels.sh  make-zip-win.bat
templates/: readonly.py
wininstbuild/: README.md  installer.nsi  licenses.txt  winfsp-1.7.20172.msi  winfsp-1.8.20304.msi  winfsp-2.0.23075.msi
(+51 files in other folders)
